fix(writing): text-alignment for aside and changed title for first post

--- a/src/_includes/layouts/writing/_tablet.scss
+++ b/src/_includes/layouts/writing/_tablet.scss
@@ -8,7 +8,8 @@
         aside {
             justify-self: flex-end;
             grid-column: 8/12;
-            grid-row: 1
+            grid-row: 1;
+            text-align: right;
         }
         .writing-posts {
             grid-column: 3/11;
